<resources>
    <string name="app_name">BMI</string>
    <string name="over_weight">Health Status:-Your are Over Weight</string>
    <string name="under_weight">Health Status:- You are Under Weight</string>
    <string name="Healthy">Health Status :- You are Healthy</string>
    <string name="Suffering_from_Obesity">Health Status :- Suffering from Obesity</string>
    <string name="what_is_bmi">What is BMI ?</string>
    <string name="aboutdev">About Developer</string>
    <string name="bmi_chart">BMI Chart</string>
    <string name="contacts_us">Contacts Us</string>
    <string name="dial">Dial</string>
    <string name="email">Email</string>
    <string name="exit">Exit</string>
    <string name="submit">SUBMIT</string>

</resources>