<?xml version="1.0" encoding="utf-8"?>

<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/about_developer"
        android:title="@string/about_developer"
        />
    <item
        android:id="@+id/about_bmi"
        android:title="@string/what_is_bmi"
        />
    <item
        android:id="@+id/bmi_chart"
        android:title="@string/bmi_chart"
        />
    <item
        android:id="@+id/contact_us"
        android:title="@string/contacts_us"
        >
        <menu>
            <item
                android:id="@+id/dial"
                android:title="@string/dial"
                />
            <item
                android:id="@+id/email"
                android:title="@string/email"

                />
        </menu>
    </item>
    <item
        android:id="@+id/exit_app"
        android:title="@string/exit"
        />
</menu>
